开发读写分离范例程序：pangu-examples-shardingsphere-readwrite-splitting，编写读写分离文档

--- a/pangu-website/docs/安装.md
+++ b/pangu-website/docs/安装.md
@@ -105,6 +105,50 @@ implementation 'com.gitee.pulanos.pangu:pangu-jdbc-spring-boot-starter:latest.ve
 </TabItem>
 </Tabs>
 
+## 分布式事务管理模块
+盘古 Seata 分布式事务自动装配模块。
+<Tabs>
+<TabItem value="maven" label="Maven坐标">
+
+```jsx
+<dependency>
+    <groupId>com.gitee.pulanos.pangu</groupId>
+    <artifactId>pangu-seata-spring-boot-starter</artifactId>
+</dependency>
+```
+
+</TabItem>
+
+<TabItem value="Gradle" label="Gradle DSL">
+
+```jsx
+implementation 'com.gitee.pulanos.pangu:pangu-seata-spring-boot-starter:latest.version.xxx'
+```
+</TabItem>
+</Tabs>
+
+## 数据治理模块
+盘古 ShardingSphere 数据治理（如：读写分离、数据分片、数据加密等）自动装配模块。
+<Tabs>
+<TabItem value="maven" label="Maven坐标">
+
+```jsx
+<dependency>
+    <groupId>com.gitee.pulanos.pangu</groupId>
+    <artifactId>pangu-shardingsphere-spring-boot-starter</artifactId>
+</dependency>
+```
+
+</TabItem>
+
+<TabItem value="Gradle" label="Gradle DSL">
+
+```jsx
+implementation 'com.gitee.pulanos.pangu:pangu-seata-spring-boot-starter:latest.version.xxx'
+```
+</TabItem>
+</Tabs>
+
 ## 缓存模块
 盘古缓存开发自动装配模块。
 <Tabs>
@@ -128,7 +172,7 @@ implementation 'com.gitee.pulanos.pangu:pangu-cache-spring-boot-starter:latest.v
 </Tabs>
 
 ## 消息队列模块
-盘古RabbitMQ消息队列开发自动装配模块。
+盘古 RabbitMQ 消息队列开发自动装配模块。
 <Tabs>
 <TabItem value="maven" label="Maven坐标">
 
@@ -145,28 +189,6 @@ implementation 'com.gitee.pulanos.pangu:pangu-cache-spring-boot-starter:latest.v
 
 ```jsx
 implementation 'com.gitee.pulanos.pangu:pangu-rabbitmq-spring-boot-starter:latest.version.xxx'
-```
-</TabItem>
-</Tabs>
-
-## 分布式事务管理模块
-盘古Seata分布式事务自动装配模块。
-<Tabs>
-<TabItem value="maven" label="Maven坐标">
-
-```jsx
-<dependency>
-    <groupId>com.gitee.pulanos.pangu</groupId>
-    <artifactId>pangu-seata-spring-boot-starter</artifactId>
-</dependency>
-```
-
-</TabItem>
-
-<TabItem value="Gradle" label="Gradle DSL">
-
-```jsx
-implementation 'com.gitee.pulanos.pangu:pangu-seata-spring-boot-starter:latest.version.xxx'
 ```
 </TabItem>
 </Tabs>
@@ -194,7 +216,7 @@ implementation 'com.gitee.pulanos.pangu:pangu-gateway-spring-boot-starter:latest
 </Tabs>
 
 ## Web模块
-盘古Web应用自动装配模块。
+盘古 Web 应用自动装配模块。
 <Tabs>
 <TabItem value="maven" label="Maven坐标">
 
@@ -216,7 +238,7 @@ implementation 'com.gitee.pulanos.pangu:pangu-web-spring-boot-starter:latest.ver
 </Tabs>
 
 ## 代码生成插件
-盘古代码生成器Maven插件。
+盘古代码生成器 Maven 插件。
 <Tabs>
 <TabItem value="maven" label="Maven坐标">
 
