更新读写分离文档

--- a/pangu-website/docs/advanced-guide/读写分离.md
+++ b/pangu-website/docs/advanced-guide/读写分离.md
@@ -14,7 +14,11 @@ import TabItem from '@theme/TabItem';
 
 ## 读写分离概念
 
-面对日益增加的系统访问量，数据库的吞吐量面临着巨大的挑战。对于同一时刻有大量并发读操作和较少写操作类型的应用系统来说，将数据库拆分为主库和从库搭架主从集群，由主库负责处理事务性的增删改操作，从库负责处理查询操作，能够有效的避免数据更新导致的行锁，从而一定程度提升整个系统的读写并发性能。
+随着业务系统日益增加的系统访问量，数据库的吞吐量往往成为系统并发的性能瓶颈。对于同一时刻有大量并发读操作和较少写操作类型的应用系统来说，将数据库拆分为主库和从库搭架主从集群，由主库负责处理事务性的增删改操作，从库负责处理查询操作，能够有效的避免数据更新导致的行锁，从而一定程度提升整个系统的读写并发性能。如下图所示。
+
+<img width="400"
+  src={require('/resources/doc/28-pangu-framework-readwrite-splitting.png').default}
+  alt="虚拟业务场景设计" />
 
 :::tip 提示
 目前支持一主一从或一主多从的主从集群架构，不支持多主写的架构。对于多从的架构可根据路由算法做读负载均衡，以将查询请求均匀的分散到多个数据副本。（数据库主从架构搭架不在本文讨论范围之内）
@@ -22,9 +26,17 @@ import TabItem from '@theme/TabItem';
 
 ### 相关专业术语
 
-- **主库**：数据 DML 写操作（新增、修改、删除）使用的数据库。仅支持单主库。
-- **从库**：数据 DQL 读操作使用的数据库。可支持多从库。
+- **主库**：数据 DML 写操作（insert、update、delete）使用的数据库。仅支持单主库。
+- **从库**：数据 DQL 读操作（select）使用的数据库。可支持多从库。
 - **主从同步**：将主库数据同步到从库的操作。依赖数据库自身的同步机制，比如：MySQL 基于 binlog 的异步复制。
+
+### 读写分离后面临的问题
+对于一般的简单理解，读写分离就是 DQL 请求走从库，DML 请求走主库。但对于开发人员而言，走实际开发中还需要考虑如下几个问题。
+- **主从数据同步延迟问题**  
+因为我们主从同步是异步复制的，不可避免的会有延迟。因此有可能出现我们 mastre 节点已经写入，但是从 slave 节点读取不到数据的问题。解决方法也很简单，见后续章节：[读操作强制走主库](#读操作强制走主库) 和 [事务方法里的所有读写操作都自动走主库](#事务方法里的所有读写操作都自动走主库)。
+
+- **事务问题** 
+如果一个事务里既包含有DML请求也有DQL请求，如果读请求走从库写请求走主库的话，则势必会带来分布式事务的问题。但对于一个写少读多的读写分离场景而言，很显然我们并不希望为了读写分离而去处理分布式事务的问题。因此对于读写分离，恰当的做法是事务中的所有 SQL 请求统一都走主库，将跨库的分布式事务转为本地事务来处理。见后续章节：[事务方法里的所有读写操作都自动走主库](#事务方法里的所有读写操作都自动走主库)。（如果对于分布式场景下对分布式事务问题的处理感兴趣，可以参考：[盘古框架分布式事务最佳实践](/docs/advanced-guide/distributed-transaction)）
 
 ## 读写分离实现原理
 实现读写分离大致有 3 种方案。如下图所示。
@@ -248,13 +260,6 @@ public void doWithTransaction() {
 	log.info("查询结果 {}", userEntityRead);
 }
 ```
-
-<details>
-  <summary><b>快速QA：</b>能不能强制把读请求强制路由到主库？</summary>
-  <div>
-完全可以的。事实上，因为我们的主从复制是异步的，不可避免的会有延迟，所以这个需求也是完全合理的。因此，在对于开启了事务的方法里，框架会自动将此方法事务结束前所有读写请求强制路由到主库上。而且如果不在事务方法里，我们需要把读请求强制路由到主库上，也是可以的。（可参考上述代码中的 <code>readByWriteRoute()</code> 方法的 <code>HintManager</code> API 用法。）
-  </div>
-</details>
 
 ## 测试
 
