--- a/pangu-website/docs/社区.md
+++ b/pangu-website/docs/社区.md
@@ -10,7 +10,7 @@ slug: /community
 在使用盘古开发框架的过程中，如果您发现任何问题，有新的想法、建议都可以通过如下方式参与到开发者社区建设中或寻求更多帮助。
 
 ## Gitee Issues
-**访问Gitee Issues：**[点我进入](https://gitee.com/pulanos/pangu-framework/issues?state=all) 
+ :100: &nbsp;[点我进入](https://gitee.com/pulanos/pangu-framework/issues?state=all) （推荐）
 
 ## 微信交流群
 
@@ -18,11 +18,11 @@ slug: /community
   src={require('/resources/wx.jpeg').default}
   alt="普蓝开源社区微信群" />   
 
- :kiss: 加我微信，拉你进开发者社区群。
+ :kiss: &nbsp;加我微信，可邀请您入群。
 
-## 作者联系方式
+## 作者Email
 
-**写信给我：** 18616786188@qq.com
+ :envelope: &nbsp;18616786188@qq.com
 
 ## 下一步
 继续阅读其它章节获取您想要的答案或通过我们的[开发者社区](/docs/community)寻求更多帮助。
