编写文档《盘古框架文档（中文）排版指南》

--- a/pangu-website/docs/advanced-guide/分布式事务.md
+++ b/pangu-website/docs/advanced-guide/分布式事务.md
@@ -4,11 +4,14 @@ tags: [分布式事务,数据持久化,Seata,事务]
 sidebar_position: 18
 slug: /advanced-guide/distributed-transaction
 ---
+<head>
+  <title>盘古开发框架 | 分布式事务 | Seata | AT、TCC、SAGA 和 XA </title>
+  <meta name="keywords" content="盘古开发框架 | 分布式事务 | Seata | AT、TCC、SAGA 和 XA " />
+  <meta name="description" content="「盘古开发框架」是完全独立于 Spring Cloud 生态的一套轻量灵活、成熟可靠的工业级分布式微服务开发和治理框架（兼容垂直单体分层架构)。它基于 Apache-2.0 协议开源发布，且是免费的。我们希望不仅是开源的受益者，也能成为开源的贡献者，与开源社区一起「共建共享开源生态」。" />
+</head>
 
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
-
-# 分布式事务
 
 盘古开发框架集成了事务中间件 [Seata](https://seata.io/en-us/index.html) 来提供分布式事务管理功能。
 
@@ -474,6 +477,6 @@ public void buyItems() {
 - [pangu-examples-seata-at-main](https://gitee.com/pulanos/pangu-framework/tree/master/pangu-examples/pangu-examples-seata-at)：商品购买业务模块
 
 ## 下一步
-继续阅读其它章节获取您想要的答案或通过我们的[开发者社区](/docs/community)寻求更多帮助。
+继续阅读其它章节获取你想要的答案或通过我们的 [开发者社区](/docs/community) 寻求更多帮助。
 
 
