--- a/pangu-website/docs/advanced-guide/分布式多级缓存.md
+++ b/pangu-website/docs/advanced-guide/分布式多级缓存.md
@@ -4,11 +4,14 @@ tags: [多级缓存, Cache]
 sidebar_position: 10
 slug: /advanced-guide/layering-cache
 ---
+<head>
+  <title>盘古开发框架 | 分布式多级缓存 | Laying Cahce</title>
+  <meta name="keywords" content="盘古开发框架 | 分布式多级缓存 | Laying Cahce" />
+  <meta name="description" content="「盘古开发框架」是完全独立于 Spring Cloud 生态的一套轻量灵活、成熟可靠的工业级分布式微服务开发和治理框架（兼容垂直单体分层架构)。它基于 Apache-2.0 协议开源发布，且是免费的。我们希望不仅是开源的受益者，也能成为开源的贡献者，与开源社区一起「共建共享开源生态」。" />
+</head>
 
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
-
-# 分布式多级缓存
 
 盘古开发框架基于[Laying Cahce](https://github.com/xiaolyuh/layering-cache)，提供支持分布式环境的多级缓存功能。使用Caffeine作为一级本地缓存，Redis作为二级集中式缓存。支持缓存信息监控统计、支持缓存过期时间在注解上直接配置、支持缓存的自动刷新、缓存Key支持SpEL表达式、支持无感禁用一级缓存或二级缓存。通过缓存空值来解决缓存穿透问题、通过异步加载缓存的方式来解决缓存击穿和雪崩问题。
 
@@ -225,4 +228,4 @@ public class LayeringCachePanguApplication {
 - [pangu-examples-cache-single](https://gitee.com/pulanos/pangu-framework/tree/master/pangu-examples/pangu-examples-cache-single)：Spring Cache一级缓存API（RedisTemplate）范例
 
 ## 下一步
-继续阅读其它章节获取您想要的答案或通过我们的[开发者社区](/docs/community)寻求更多帮助。
+继续阅读其它章节获取你想要的答案或通过我们的 [开发者社区](/docs/community) 寻求更多帮助。
