--- a/pangu-website/docs/advanced-guide/消息队列.md
+++ b/pangu-website/docs/advanced-guide/消息队列.md
@@ -4,6 +4,11 @@ tags: [消息队列]
 sidebar_position: 20
 slug: /advanced-guide/mq
 ---
+<head>
+  <title>盘古开发框架 | 消息队列 MQ | RabbitMQ </title>
+  <meta name="keywords" content="盘古开发框架 | 消息队列 MQ | RabbitMQ " />
+  <meta name="description" content="「盘古开发框架」是完全独立于 Spring Cloud 生态的一套轻量灵活、成熟可靠的工业级分布式微服务开发和治理框架（兼容垂直单体分层架构)。它基于 Apache-2.0 协议开源发布，且是免费的。我们希望不仅是开源的受益者，也能成为开源的贡献者，与开源社区一起「共建共享开源生态」。" />
+</head>
 
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
@@ -264,4 +269,4 @@ public void sendMsg() {
 - [pangu-examples-mq-rabbitmq-receiver](https://gitee.com/pulanos/pangu-framework/tree/master/pangu-examples/pangu-examples-mq-rabbitmq-receiver)：消息队列范例（消费者）
 
 ## 下一步
-继续阅读其它章节获取您想要的答案或通过我们的[开发者社区](/docs/community)寻求更多帮助。
+继续阅读其它章节获取你想要的答案或通过我们的 [开发者社区](/docs/community) 寻求更多帮助。
