--- a/pangu-website/docs/advanced-guide/配置中心.md
+++ b/pangu-website/docs/advanced-guide/配置中心.md
@@ -4,6 +4,11 @@ tags: [nacos, 配置中心,盘古简介,盘古架构]
 sidebar_position: 1
 slug: /advanced-guide/nacos-config-center
 ---
+<head>
+  <title>盘古开发框架 | 配置中心 | 基于配置中心的日志级别热切换 | Nacos</title>
+  <meta name="keywords" content="盘古开发框架 | 配置中心 | 基于配置中心的日志级别热切换 | Nacos" />
+  <meta name="description" content="「盘古开发框架」是完全独立于 Spring Cloud 生态的一套轻量灵活、成熟可靠的工业级分布式微服务开发和治理框架（兼容垂直单体分层架构)。它基于 Apache-2.0 协议开源发布，且是免费的。我们希望不仅是开源的受益者，也能成为开源的贡献者，与开源社区一起「共建共享开源生态」。" />
+</head>
 
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
@@ -18,7 +23,7 @@ import TabItem from '@theme/TabItem';
 
 ## 配置中心介绍
 
-Nacos动态配置服务可以让您以中心化、外部化和动态化的方式管理所有环境的应用配置和服务配置。动态配置消除了配置变更时重新部署应用和服务的需要，让配置管理变得更加高效和敏捷。配置中心化管理让实现无状态服务变得更简单，让服务按需弹性扩展变得更容易。它还提供了一个简洁易用的UI帮助您管理所有的服务和应用的配置，包括配置版本跟踪、金丝雀发布、一键回滚配置等一系列开箱即用的配置管理特性，帮助您更安全地在生产环境中管理配置变更和降低配置变更带来的风险。
+Nacos动态配置服务可以让你以中心化、外部化和动态化的方式管理所有环境的应用配置和服务配置。动态配置消除了配置变更时重新部署应用和服务的需要，让配置管理变得更加高效和敏捷。配置中心化管理让实现无状态服务变得更简单，让服务按需弹性扩展变得更容易。它还提供了一个简洁易用的UI帮助你管理所有的服务和应用的配置，包括配置版本跟踪、金丝雀发布、一键回滚配置等一系列开箱即用的配置管理特性，帮助你更安全地在生产环境中管理配置变更和降低配置变更带来的风险。
 
 <details>
   <summary><b>快速QA：</b>前文中Nacos用于服务注册，为什么配置中心也是它？</summary>
@@ -182,4 +187,4 @@ logging.level.com.gitee.pulanos.pangu=INFO
 - [pangu-examples-log-dynamic](https://gitee.com/pulanos/pangu-framework/tree/master/pangu-examples/pangu-examples-log-dynamic)：基于配置中心的日志级别热切换参考范例
 
 ## 下一步
-继续阅读其它章节获取您想要的答案或通过我们的[开发者社区](/docs/community)寻求更多帮助。
+继续阅读其它章节获取你想要的答案或通过我们的 [开发者社区](/docs/community) 寻求更多帮助。
