--- a/pangu-website/docs/代码生成器插件.md
+++ b/pangu-website/docs/代码生成器插件.md
@@ -4,8 +4,12 @@ tags: [代码生成器插件,数据持久化, MyBatis, MyBatis-Plus,盘古简介
 sidebar_position: 14
 slug: /code-generator
 ---
+<head>
+  <title>盘古开发框架 | 盘古代码生成器插件</title>
+  <meta name="keywords" content="盘古开发框架 | 盘古代码生成器插件" />
+  <meta name="description" content="「盘古开发框架」是完全独立于 Spring Cloud 生态的一套轻量灵活、成熟可靠的工业级分布式微服务开发和治理框架（兼容垂直单体分层架构)。它基于 Apache-2.0 协议开源发布，且是免费的。我们希望不仅是开源的受益者，也能成为开源的贡献者，与开源社区一起「共建共享开源生态」。" />
+</head>
 
-# 盘古代码生成器插件
 盘古代码生成器是基于Maven的一个自定义插件。可以方便快捷的以插件的方式安装到任何一个Maven模块中去。目前支持生成如下代码。
 - MyBatis Plus Mapper.java 映射接口文件
 - MyBatis Plus Entity.java 实体文件
@@ -97,5 +101,5 @@ xc@xc-mac pangu-examples-crud % mvn pangu:generate
 - [pangu-examples-dubbo-api](https://gitee.com/pulanos/pangu-framework/tree/master/pangu-examples/pangu-examples-dubbo-api)：服务接口包（含代码生成器演示）
 
 ## 下一步
-继续阅读其它章节获取您想要的答案或通过我们的[开发者社区](/docs/community)寻求更多帮助。
+继续阅读其它章节获取你想要的答案或通过我们的 [开发者社区](/docs/community) 寻求更多帮助。
 
