--- a/pangu-website/docs/安装.md
+++ b/pangu-website/docs/安装.md
@@ -4,11 +4,14 @@ tags: [盘古简介,盘古架构]
 sidebar_position: 2
 slug: /install
 ---
+<head>
+  <title>盘古开发框架 | 安装 | 依赖管理模块 | 基础模块 | Dubbo模块 | JDBC模块 | 分布式事务管理模块 | 数据治理模块 | 缓存模块 | 消息队列模块 | 网关模块 | Web模块 | 代码生成插件</title>
+  <meta name="keywords" content="盘古开发框架 | 安装 | 依赖管理模块 | 基础模块 | Dubbo模块 | JDBC模块 | 分布式事务管理模块 | 数据治理模块 | 缓存模块 | 消息队列模块 | 网关模块 | Web模块 | 代码生成插件" />
+  <meta name="description" content="「盘古开发框架」是完全独立于 Spring Cloud 生态的一套轻量灵活、成熟可靠的工业级分布式微服务开发和治理框架（兼容垂直单体分层架构)。它基于 Apache-2.0 协议开源发布，且是免费的。我们希望不仅是开源的受益者，也能成为开源的贡献者，与开源社区一起「共建共享开源生态」。" />
+</head>
 
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
-
-# 盘古框架安装
 
 本文将介绍如何通过包依赖管理工具安装盘古框架。
 
@@ -260,4 +263,4 @@ implementation 'com.gitee.pulanos.pangu:pangu-generator-maven-plugin:latest.vers
 </Tabs>
 
 ## 下一步
-继续阅读其它章节获取您想要的答案或通过我们的[开发者社区](/docs/community)寻求更多帮助。
+继续阅读其它章节获取你想要的答案或通过我们的 [开发者社区](/docs/community) 寻求更多帮助。
