--- a/pangu-website/docs/致敬 & 鸣谢.md
+++ b/pangu-website/docs/致敬 & 鸣谢.md
@@ -4,6 +4,11 @@ tags: []
 sidebar_position: 20
 slug: /thanks
 ---
+<head>
+  <title>盘古开发框架 | 致敬 & 鸣谢</title>
+  <meta name="keywords" content="盘古开发框架 | 致敬 & 鸣谢" />
+  <meta name="description" content="「盘古开发框架」是完全独立于 Spring Cloud 生态的一套轻量灵活、成熟可靠的工业级分布式微服务开发和治理框架（兼容垂直单体分层架构)。它基于 Apache-2.0 协议开源发布，且是免费的。我们希望不仅是开源的受益者，也能成为开源的贡献者，与开源社区一起「共建共享开源生态」。" />
+</head>
 
 :::info
 盘古开发框架使用了很多优秀的开源项目，也正是由于站在这些开源项目的肩膀上，才有盘古开发框架诞生的可能。我们也希望不仅是开源的受益者，也能成为开源生态的贡献者。鉴于此，特单独列出如下盘古框架依赖到的开源基金会/社区组织、开源项目，为他们对开源世界所做出的卓越贡献表示致敬和感谢。
@@ -37,4 +42,4 @@ slug: /thanks
 :::
 
 ## 下一步
-继续阅读其它章节获取您想要的答案或通过我们的[开发者社区](/docs/community)寻求更多帮助。
+继续阅读其它章节获取你想要的答案或通过我们的 [开发者社区](/docs/community) 寻求更多帮助。
