--- a/pangu-website/docs/advanced-guide/分布式锁.md
+++ b/pangu-website/docs/advanced-guide/分布式锁.md
@@ -4,11 +4,14 @@ tags: [分布式锁,数据持久化]
 sidebar_position: 15
 slug: /advanced-guide/distributed-lock
 ---
+<head>
+  <title>盘古开发框架 | 分布式锁 | lock4j</title>
+  <meta name="keywords" content="盘古开发框架 | 分布式锁 | lock4j" />
+  <meta name="description" content="「盘古开发框架」是完全独立于 Spring Cloud 生态的一套轻量灵活、成熟可靠的工业级分布式微服务开发和治理框架（兼容垂直单体分层架构)。它基于 Apache-2.0 协议开源发布，且是免费的。我们希望不仅是开源的受益者，也能成为开源的贡献者，与开源社区一起「共建共享开源生态」。" />
+</head>
 
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
-
-# 分布式锁
 
 盘古开发框架基于[lock4j](https://gitee.com/baomidou/lock4j)，提供分布式锁。支持注解声明式和API编程式对业务代码在分布式环境下加并发锁。
 
@@ -154,5 +157,5 @@ public class LockPanguApplication {
 - [pangu-examples-lock-redis-based](https://gitee.com/pulanos/pangu-framework/tree/master/pangu-examples/pangu-examples-lock-redis-based)：分布式锁范例
 
 ## 下一步
-继续阅读其它章节获取您想要的答案或通过我们的[开发者社区](/docs/community)寻求更多帮助。
+继续阅读其它章节获取你想要的答案或通过我们的 [开发者社区](/docs/community) 寻求更多帮助。
 
