编写文档《盘古框架文档（中文）排版指南》

--- a/pangu-website/blog/盘古框架文档排版指南.md
+++ b/pangu-website/blog/盘古框架文档排版指南.md
@@ -1,6 +1,6 @@
 ---
 slug: chinese-copywriting-guidelines
-title: 盘古框架文档（中文）排版指南
+title: 盘古框架文档排版指南
 authors: [xiongchun]
 tags: []
 date: 2022-01-29
@@ -103,7 +103,7 @@ hide_table_of_contents: false
 
 ## 名词
 
-### 专有名词使用正确的大小写
+### 使用正确的大小写
 
 大小写相关用法原属于英文书写范畴，但部分专有名词以其官方书写规范为准。（如：GitEE、GitHub、PanGu Dev Framework等）
 
