根据「盘古框架文档（中文）排版指南」重构已有文档

--- a/pangu-website/docs/quick-start/如何开发微服务.md
+++ b/pangu-website/docs/quick-start/如何开发微服务.md
@@ -62,12 +62,12 @@ import TabItem from '@theme/TabItem';
 </Tabs>
 
 :::caution
-盘古框架微服务交互基于Dubbo提供的面向接口代理的高性能RPC调用能力。因此，对于内部服务模块之间的交互调用，不管是服务的提供者还是服务消费者，都需要依赖API服务接口包。当然，对于网关而言，使用的是泛化调用，也就是说当网关模块作为微服务消费者的时候是不需要依赖服务提供者的接口包的。
+盘古框架微服务交互基于 Dubbo 提供的面向接口代理的高性能 RPC 调用能力。因此，对于内部服务模块之间的交互调用，不管是服务的提供者还是服务消费者，都需要依赖 API 服务接口包。当然，对于网关而言，使用的是泛化调用，也就是说当网关模块作为微服务消费者的时候是不需要依赖服务提供者的接口包的。
 :::
 
 ### 本地配置
 
-> 为便于理解，本文基于本地配置的方式编写。若改为标准的Nacos配置中心模式，请参阅:[配置中心](/docs/advanced-guide/nacos-config-center)章节。
+> 为便于理解，本文基于本地配置的方式编写。若改为标准的 Nacos 配置中心模式，请参阅：[配置中心](/docs/advanced-guide/nacos-config-center) 章节。
 
 <Tabs>
 <TabItem value="application" label="application.properties">
@@ -126,19 +126,19 @@ public class DubboProviderApplication {
 }
 ```
 
-通过`@EnableDubbo`注解开启Dubbo支持。由于Dubbo的使用netty作为底层网络通信，决定了盘古微服务应用启动和提供服务并不需要依赖Servlet容器。
+通过 `@EnableDubbo` 注解开启 Dubbo 支持。由于 Dubbo 的使用 netty 作为底层网络通信，决定了盘古微服务应用启动和提供服务并不需要依赖 Servlet 容器。
 
 ```jsx title="启动参数设置（如下示例）"
 -Dnacos.server-addr=127.0.0.1:8848 -Dnacos.namespace=pangu-dev
 ```
 
 ### 服务注册
-成功启动应用会自动像Nacos服务注册中心注册服务。登录Nacos控制台即可在【服务管理->服务列表】页查看效果。如下图所示。
+成功启动应用会自动像 Nacos 服务注册中心注册服务。登录 Nacos 控制台即可在【服务管理->服务列表】页查看效果。如下图所示。
 
 ![盘古开发Dubbo服务](/resources/doc/1-pangu-framework-nacos-service-regist.png)
 
 ## 服务消费者
-上述服务注册到Nacos服务中心以后就可以对外提供服务了。可以在任何一个SpringBean组件中（一般是Service、Manager等），引入服务接口后就像本地接口调用一样调用远程服务。Dubbo将提供高性能的基于代理的远程调用能力，服务以接口为粒度，为开发者屏蔽远程调用底层细节。服务消费端所需要的依赖和提供端是一样的，这里不再赘述。仅给出消费相关代码。如下所示。
+上述服务注册到 Nacos 服务中心以后就可以对外提供服务了。可以在任何一个 SpringBean 组件中（一般是 Service、Manager 等），引入服务接口后就像本地接口调用一样调用远程服务。Dubbo 将提供高性能的基于代理的远程调用能力，服务以接口为粒度，为开发者屏蔽远程调用底层细节。服务消费端所需要的依赖和提供端是一样的，这里不再赘述。仅给出消费相关代码。如下所示。
 
 ```jsx {3,8} title="服务消费端，调用远程服务代码 UserAdminManager.java"
 @Component
