开发数据分片范例程序：pangu-examples-shardingsphere-sharding，编写数据分片文档

--- a/pangu-website/docs/advanced-guide/数据治理之读写分离.md
+++ b/pangu-website/docs/advanced-guide/数据治理之读写分离.md
@@ -79,6 +79,8 @@ import TabItem from '@theme/TabItem';
 <TabItem value="master" label="主库 DDL">
 
 ``` jsx
+主库 DB：pangu-examples
+
 CREATE TABLE `user` (
   `id` bigint(20) NOT NULL AUTO_INCREMENT COMMENT '流水号',
   `name` varchar(255) NOT NULL COMMENT '姓名',
@@ -89,21 +91,28 @@ CREATE TABLE `user` (
   `gmt_update` datetime DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP COMMENT '更新时间',
   PRIMARY KEY (`id`) USING BTREE
 ) ENGINE=InnoDB AUTO_INCREMENT=20 DEFAULT CHARSET=utf8mb4 COMMENT='用户信息表';
-INSERT INTO `pangu-examples`.`user` (`id`, `name`, `birthday`, `age`, `user_type`) VALUES (1, 'XC（master）', NULL, 18, '1');
+
+INSERT INTO `user` (`id`, `name`, `birthday`, `age`, `user_type`) VALUES (1, 'XC（master）', NULL, 18, '1');
 ```
 </TabItem>
 <TabItem value="slave-0" label="从库1 DDL">
 
 ```jsx
--- 建表脚本同主库
-INSERT INTO `pangu-examples-0`.`user` (`id`, `name`, `birthday`, `age`, `user_type`) VALUES (1, 'XC（slave-0）', NULL, 18, '1');
+从库1 DB：pangu-examples-0
+
+CREATE TABLE...（建表脚本同主库）
+
+INSERT INTO `user` (`id`, `name`, `birthday`, `age`, `user_type`) VALUES (1, 'XC（slave-0）', NULL, 18, '1');
 ```
 </TabItem>
 <TabItem value="account" label="从库2 DDL">
 
 ```jsx
--- 建表脚本同主库
-INSERT INTO `pangu-examples-1`.`user` (`id`, `name`, `birthday`, `age`, `user_type`) VALUES (1, 'XC（slave-1）', NULL, 18, '1');
+从库2 DB：pangu-examples-1
+
+CREATE TABLE...（建表脚本同主库）
+
+INSERT INTO `user` (`id`, `name`, `birthday`, `age`, `user_type`) VALUES (1, 'XC（slave-1）', NULL, 18, '1');
 ```
 </TabItem>
 </Tabs>
