--- a/pangu-website/docs/advanced-guide/数据治理之读写分离.md
+++ b/pangu-website/docs/advanced-guide/数据治理之读写分离.md
@@ -1,19 +1,19 @@
 ---
-title: 数据治理之数据分片
+title: 数据治理之读写分离
 tags: [数据分片,读写分离,数据持久化]
 sidebar_position: 25
-slug: /advanced-guide/data-sharding
+slug: /advanced-guide/readwrite-splitting
 ---
 <head>
-  <title>盘古开发框架 | 数据治理之数据持久化 | ShardingSphere-JDBC</title>
-  <meta name="keywords" content="盘古开发框架 | 数据治理之数据持久化 | ShardingSphere-JDBC" />
+  <title>盘古开发框架 | 数据治理之读写分离 | ShardingSphere-JDBC</title>
+  <meta name="keywords" content="盘古开发框架 | 数据治理之读写分离 | ShardingSphere-JDBC" />
   <meta name="description" content="「盘古开发框架」是完全独立于 Spring Cloud 生态的一套轻量灵活、成熟可靠的工业级分布式微服务开发和治理框架（兼容垂直单体分层架构)。它基于 Apache-2.0 协议开源发布，且是免费的。我们希望不仅是开源的受益者，也能成为开源的贡献者，与开源社区一起「共建共享开源生态」。" />
 </head>
 
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
-盘古开发框架集成了数据库中间件 [ShardingSphere](https://shardingsphere.apache.org/index.html) 来提供数据治理相关功能。如：数据分片、读写分离、数据加密等。
+盘古开发框架集成了数据库中间件 [ShardingSphere](https://shardingsphere.apache.org/index.html) 来提供数据治理相关功能。如：读写分离、数据分片、数据加密等。
 
 ## 读写分离概念
 
@@ -179,6 +179,7 @@ spring.application.name=pangu-examples-shardingsphere-readwrite-splitting
 
 mybatis-plus.mapperLocations=classpath*:/mapper/**/*.xml
 mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+
 
 spring.shardingsphere.datasource.names=ds-master,ds-slave-0,ds-slave-1
 
