开发数据分片范例程序：pangu-examples-shardingsphere-sharding，编写数据分片文档

--- a/pangu-website/docs/advanced-guide/数据治理之数据分片.md
+++ b/pangu-website/docs/advanced-guide/数据治理之数据分片.md
@@ -19,29 +19,35 @@ import TabItem from '@theme/TabItem';
 
 随着业务规模不断的扩大，将数据集中存储到单一节点的解决方案，在**性能**、**可用性**和**运维成本**等方面已经难于满足高并发和海量数据系统的场景。从性能方面来说，高并发访问请求使得集中式数据库成为系统的最大瓶颈；从可用性的方面来讲，单一数据节点或简单主从架构，已经越来越难以满足大量互联网 To C 业务对高可用的迫切诉求，数据库的可用性俨然已成为整个系统的关键；从运维成本和风险方面考虑，当一个数据库实例中的数据达到阈值以上，数据备份和恢复的时间成本和风险都将随着数据量的大小而愈发不可控。
 
-因此，通过数据分片将存放在单一库中的数据分散至多个库或表中以达到提升性能、提高可用性和降低运维成本的效果。数据分片的有效手段是对数据库进行分库和分表。分库和分表均可以有效的避免由数据量超过可承受阈值而产生的查询瓶颈，同时也是应对高并发和海量数据系统的有效手段。数据分片可分为垂直分片和水平分片。
+因此，通过数据分片将存放在单一库中的数据分散至多个库或表中以达到提升性能、提高可用性和降低运维成本的效果。数据分片的有效手段是对数据库进行分库和分表。分库和分表均可以有效的避免由数据量超过可承受阈值而产生的查询瓶颈，同时也是应对高并发和海量数据系统的有效手段。
 
-<img width="400"
-  src={require('/resources/doc/28-pangu-framework-readwrite-splitting.png').default}
-  alt="虚拟业务场景设计" />
+### 数据分片类型
+数据分片可分为垂直分片和水平分片。如下图所示。
 
-:::tip 提示
-目前支持一主一从或一主多从的主从集群架构，不支持多主写的架构。对于多从的架构可根据路由算法做读负载均衡，以将查询请求均匀的分散到多个数据副本。（数据库主从架构搭架不在本文讨论范围之内）
-:::
+<img width="800"
+  src={require('/resources/doc/27-pangu-framework-readwrite-splitting.png').default}
+  alt="读写分离实现原理" />
+  
+#### 垂直分片
+垂直分片是按照业务域将数据库纵向切分为不同业务专门使用的相对小库。如电商系统的用户库、订单库、会员库、仓储库、账户库等。垂直拆分可以一定程度缓解数据量和并发量带来的问题，但无法根治。如果垂直拆分之后，表中的数据量依然超过单节点所能承载的阈值，则需要水平分片来进一步处理。
+ 
+#### 水平分片
+水平分片又称为横向拆分。相对于垂直分片，它不再将数据根据业务逻辑分类，而是通过某个字段（或某几个字段），根据某种规则将数据分散至多个库或多个表中。例如：根据主键分片，偶数主键的记录放入 db_0（或 table_0），奇数主键的记录放入 db_1（或table_1）。
 
-### 相关专业术语
 
-- **主库**：数据 DML 写操作（insert、update、delete）使用的数据库。仅支持单主库。
-- **从库**：数据 DQL 读操作（select）使用的数据库。可支持多从库。
-- **主从同步**：将主库数据同步到从库的操作。依赖数据库自身的同步机制，比如：MySQL 基于 binlog 的异步复制。
-
-### 读写分离后面临的问题
+### 数据分片后面临的问题
 对于一般的简单理解，读写分离就是 DQL 请求走从库，DML 请求走主库。但对于开发人员而言，在实际开发中还需要考虑如下问题。
 - **主从数据同步延迟问题**  
 因为我们主从同步是异步复制的，不可避免的会有延迟。因此有可能出现 mastre 节点已经写入，但是从 slave 节点读取不到数据的问题。解决方法见后续章节：[读操作强制走主库](#读操作强制走主库) 和 [事务方法里的所有读写操作都自动走主库](#事务方法里的所有读写操作都自动走主库)。
 
 - **事务问题** 
 如果一个事务方法里既包含有 DML 请求也有 DQL 请求，如果读请求走从库写请求走主库的话，则势必会带来分布式事务的问题。但对于大部分读写分离场景而言，很显然我们并不希望为了读写分离而去处理分布式事务的问题。因此对于读写分离，恰当的做法是将事务方法中的所有 SQL 请求统一都走主库，将跨库的分布式事务转为本地事务来处理。见后续章节：[事务方法里的所有读写操作都自动走主库](#事务方法里的所有读写操作都自动走主库)。（如果对于分布式场景下的分布式事务问题的处理感兴趣，可以参考：[盘古框架分布式事务最佳实践](/docs/advanced-guide/distributed-transaction)）
+
+### 相关专业术语
+
+- **主库**：数据 DML 写操作（insert、update、delete）使用的数据库。仅支持单主库。
+- **从库**：数据 DQL 读操作（select）使用的数据库。可支持多从库。
+- **主从同步**：将主库数据同步到从库的操作。依赖数据库自身的同步机制，比如：MySQL 基于 binlog 的异步复制。
 
 ## 读写分离实现原理
 实现读写分离大致有 3 种方案。如下图所示。
