--- a/pangu-website/docs/advanced-guide/数据治理之读写分离.md
+++ b/pangu-website/docs/advanced-guide/数据治理之读写分离.md
@@ -27,12 +27,6 @@ import TabItem from '@theme/TabItem';
 目前支持一主一从或一主多从的主从集群架构，不支持多主写的架构。对于多从的架构可根据路由算法做读负载均衡，以将查询请求均匀的分散到多个数据副本。（数据库主从架构搭架不在本文讨论范围之内）
 :::
 
-### 相关专业术语
-
-- **主库**：数据 DML 写操作（insert、update、delete）使用的数据库。仅支持单主库。
-- **从库**：数据 DQL 读操作（select）使用的数据库。可支持多从库。
-- **主从同步**：将主库数据同步到从库的操作。依赖数据库自身的同步机制，比如：MySQL 基于 binlog 的异步复制。
-
 ### 读写分离后面临的问题
 对于一般的简单理解，读写分离就是 DQL 请求走从库，DML 请求走主库。但对于开发人员而言，在实际开发中还需要考虑如下问题。
 - **主从数据同步延迟问题**  
@@ -41,11 +35,17 @@ import TabItem from '@theme/TabItem';
 - **事务问题** 
 如果一个事务方法里既包含有 DML 请求也有 DQL 请求，如果读请求走从库写请求走主库的话，则势必会带来分布式事务的问题。但对于大部分读写分离场景而言，很显然我们并不希望为了读写分离而去处理分布式事务的问题。因此对于读写分离，恰当的做法是将事务方法中的所有 SQL 请求统一都走主库，将跨库的分布式事务转为本地事务来处理。见后续章节：[事务方法里的所有读写操作都自动走主库](#事务方法里的所有读写操作都自动走主库)。（如果对于分布式场景下的分布式事务问题的处理感兴趣，可以参考：[盘古框架分布式事务最佳实践](/docs/advanced-guide/distributed-transaction)）
 
+### 相关专业术语
+
+- **主库**：数据 DML 写操作（insert、update、delete）使用的数据库。仅支持单主库。
+- **从库**：数据 DQL 读操作（select）使用的数据库。可支持多从库。
+- **主从同步**：将主库数据同步到从库的操作。依赖数据库自身的同步机制，比如：MySQL 基于 binlog 的异步复制。
+
 ## 读写分离实现原理
 实现读写分离大致有 3 种方案。如下图所示。
 <img width="800"
   src={require('/resources/doc/27-pangu-framework-readwrite-splitting.png').default}
-  alt="虚拟业务场景设计" />
+  alt="读写分离实现原理" />
 
 - **数据库代理模式（服务端代理）**  
 在数据库和应用系统之间独立部署一个数据库代理中间件，所有的 SQL 请求先发送到这个代理，由它完成 SQL 解析、SQL 路由等必要操作。在这种模式下，路由规则都配置到代理上，读写分离的逻辑对开发人员是透明的。
