开发数据分片范例程序：pangu-examples-shardingsphere-sharding，编写数据分片文档

--- a/pangu-website/docs/advanced-guide/数据治理之数据分片.md
+++ b/pangu-website/docs/advanced-guide/数据治理之数据分片.md
@@ -53,11 +53,17 @@ import TabItem from '@theme/TabItem';
 
 ### 相关专业术语
 
-- **主库**：数据 DML 写操作（insert、update、delete）使用的数据库。仅支持单主库。
-- **从库**：数据 DQL 读操作（select）使用的数据库。可支持多从库。
-- **主从同步**：将主库数据同步到从库的操作。依赖数据库自身的同步机制，比如：MySQL 基于 binlog 的异步复制。
-
-
+- **逻辑表**：相同结构的水平拆分数据库（表）的逻辑名称，是 SQL 中表的逻辑标识。如：t_order 表被拆分为 t_order0 和 t_order1，则 t_order 是逻辑表，并不存放数据，仅用于SQL中的逻辑标识。
+- **真实表**：在水平拆分的数据库中真实存在的物理表。如：t_order 表被拆分为 t_order0 和 t_order1，则 t_order0 和 t_order1 是真实表表，存放数据。
+- **绑定表**：指分片规则一致的主表和子表。 使用绑定表进行多表关联查询时，必须使用分片键进行关联，否则会出现笛卡尔积关联或跨库关联，从而影响查询效率。 例如：t_order 表和 t_order_item 表，均按照 order_id 分片，并且使用 order_id 进行关联，则此两张表互为绑定表关系。绑定表之间的多表关联查询不会出现笛卡尔积关联，关联查询效率将大大提升。可以在配置中配置绑定表关系。
+- **广播表**：指所有的分片数据源中都存在的表，表结构及其数据在每个数据库中均完全一致。 适用于数据量不大且需要与海量数据的表进行关联查询的场景，例如：字典表。对广播表的DML操作，会自动路由到所有的数据节点。
+- **单表**：指不需要参与分片且所有数据源中唯一存在的表。
+- **数据节点**：数据分片的最小单元，由数据源名称和真实表组成。 如：ds0.t_order_0。
+- **分片键**：用于将数据库（表）水平拆分的数据库字段。
+- **分片策略**：分片键 + 分片算法。
+- **分布式主键**：对于分片后的表主键不能使用数据库自身的自增列机制，需要额外引入主键生成策略。ShardingSphere 提供了基于 UUID 和 SNOWFLAKE 的分布式主键生成机制，但不建议使用。最灵活的方式还是自己生成分布式ID传给新增的实体对象。盘古框架使用 MyBatis Plus 的主键生成功能。（同样可选 UUID 主键和 SNOWFLAKE 算法主键）
+> 提示：SNOWFLAKE 算法主键能保证递增，但不能保证数字的连续性。如果需要递增且连续的分布式主键，需要自己实现。
+- **强制分片路由**：基于 Hint 机制指定了强制分片路由的 SQL 将会无视原有的分片逻辑，直接路由至指定的真实数据节点。
 
 ## 读写分离实现原理
 实现读写分离大致有 3 种方案。如下图所示。
