开发数据分片范例程序：pangu-examples-shardingsphere-sharding，编写数据分片文档

--- a/pangu-website/docs/advanced-guide/数据治理之数据分片.md
+++ b/pangu-website/docs/advanced-guide/数据治理之数据分片.md
@@ -30,7 +30,7 @@ import TabItem from '@theme/TabItem';
 #### 水平分片
 水平分片又称为横向拆分。相对于垂直分片，它不再将数据根据业务逻辑分类，而是通过某个字段（或某几个字段），根据某种规则将数据分散至多个库或多个表中。水平分片从理论上突破了单机数据量处理的瓶颈，并且扩展相对自由，是数据分片的标准解决方案。水平分片从具体实现上又可以分为3种：**只分表**、**只分库**、**分库分表**。如下图所示。
 
-<img width="650"
+<img width="800"
   src={require('/resources/doc/29-pangu-framework-sharding.png').default}
   alt="数据治理之数据分片" />
 
@@ -65,81 +65,47 @@ import TabItem from '@theme/TabItem';
 > 提示：SNOWFLAKE 算法主键能保证递增，但不能保证数字的连续性。如果需要递增且连续的分布式主键，需要自己实现。
 - **强制分片路由**：基于 Hint 机制指定了强制分片路由的 SQL 将会无视原有的分片逻辑，直接路由至指定的真实数据节点。
 
-## 读写分离实现原理
-实现读写分离大致有 3 种方案。如下图所示。
+## 数据分片实现原理
+实现数据分片大致有 2 种方案。如下图所示。
 <img width="800"
-  src={require('/resources/doc/27-pangu-framework-readwrite-splitting.png').default}
-  alt="虚拟业务场景设计" />
+  src={require('/resources/doc/30-pangu-framework-sharding.png').default}
+  alt="数据分片实现原理" />
 
 - **数据库代理模式（服务端代理）**  
-在数据库和应用系统之间独立部署一个数据库代理中间件，所有的 SQL 请求先发送到这个代理，由它完成 SQL 解析、SQL 路由等必要操作。在这种模式下，路由规则都配置到代理上，读写分离的逻辑对开发人员是透明的。
+在数据库和应用系统之间独立部署一个数据库代理中间件，所有的 SQL 请求先发送到这个代理，由它完成 SQL 解析、SQL改写、SQL 路由、结果集聚合等必要操作。在这种模式下，路由规则都配置到代理上，数据分片的逻辑对开发人员是透明的。
 
 - **数据源代理模式（客户端代理）**  
-通过在应用端引入组件包，代理应用普通数据源。在这种模式下，路由规则配置到应用侧，所有 SQL 请求都通过代理数据源完成 SQL 解析、SQL 路由等必要操作。
-
-- ~~**ORM 框架代理模式（客户端代理）**~~  
-通过 ORM 框架（Hibernate、Mybatis 等）的插件、拦截器机制实现。这只能算是特定环境下的一种实现方法，不能作为一套完整的标准化解决方案。故在此不做更多描述。
-
-### 技术方案指标对比
+通过在应用端引入组件包，代理应用普通数据源。在这种模式下，路由规则配置到应用侧，所有 SQL 请求都通过代理数据源完成 SQL 解析、SQL改写、SQL 路由、结果集聚合等必要操作。
  
-|<div style={{width:'120px'}}>技术方案</div>| 可选组件 | <div style={{width:'150px'}}>优点</div> | <div style={{width:'200px'}}>缺点</div>
+|<div style={{width:'120px'}}>实现方式</div>| 可选组件 | <div style={{width:'150px'}}>优点</div> | <div style={{width:'200px'}}>缺点</div>
 --- | --- | --- | ---
 **数据库代理模式** | ShardingSphere-Proxy <br></br> MyCat | 多语言支持<br></br>独立部署（升级简单）<br></br>对开发完全透明 | 独立部署（增加不稳定因素）<br></br> 运维成本高<br></br>性能损耗高
 **数据源代理模式 :kiss: ** | ShardingSphere-JDBC | 集成简单、轻松驾驭<br></br>性能较好 | 嵌入 JAR（升级麻烦）<br></br>日常数据维护麻烦
-**~~ORM 框架代理模式~~** | 自研/硬编码 | 硬撸一时爽 | 事后火葬场
 
 :::caution 
-盘古开发框架使用 ShardingSphere-JDBC 组件，通过数据源代理的方式实现读写分离功能。
+盘古开发框架使用 ShardingSphere-JDBC 组件，通过数据源代理的方式实现数据分片功能。
 :::
 
-## 编程实战
-
-本实例以一主二从的数据库主从集群为例，来演示如何基于盘古框架开发一个读写分离且支持读负载均衡的范例程序。
+## 编程实战一：只分表
 
 ### 初始化数据库环境
-> 基于一个用户信息表来演示。为了方便查看测试效果，我们分别把三个库中的用户姓名字段的值打上不同的标记。
 
-<Tabs>
-<TabItem value="master" label="主库 DDL">
+数据库表结构如下图所示。
+<img width="200"
+  src={require('/resources/doc/31-pangu-framework-sharding.png').default}
+  alt="数据分片实现-只分表" />
 
-``` jsx
-主库 DB：pangu-examples
-
-CREATE TABLE `user` (
-  `id` bigint(20) NOT NULL AUTO_INCREMENT COMMENT '流水号',
-  `name` varchar(255) NOT NULL COMMENT '姓名',
-  `birthday` date DEFAULT NULL COMMENT '生日',
-  `age` int(11) DEFAULT NULL COMMENT '年龄',
-  `user_type` varchar(255) DEFAULT NULL COMMENT '用户类型',
-  `gmt_create` datetime DEFAULT CURRENT_TIMESTAMP COMMENT '创建时间',
-  `gmt_update` datetime DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP COMMENT '更新时间',
-  PRIMARY KEY (`id`) USING BTREE
-) ENGINE=InnoDB AUTO_INCREMENT=20 DEFAULT CHARSET=utf8mb4 COMMENT='用户信息表';
-
-INSERT INTO `user` (`id`, `name`, `birthday`, `age`, `user_type`) VALUES (1, 'XC（master）', NULL, 18, '1');
-```
-</TabItem>
-<TabItem value="slave-0" label="从库1 DDL">
-
+请根据如下逻辑表结构创建真实表 t_order0 和 t_order1。
 ```jsx
-从库1 DB：pangu-examples-0
-
-CREATE TABLE...（建表脚本同主库）
-
-INSERT INTO `user` (`id`, `name`, `birthday`, `age`, `user_type`) VALUES (1, 'XC（slave-0）', NULL, 18, '1');
+create table t_order
+(
+    order_id bigint      not null
+        primary key,
+    user_id  int         not null,
+    status   varchar(50) null
+)
+comment '逻辑表:订单表';
 ```
-</TabItem>
-<TabItem value="account" label="从库2 DDL">
-
-```jsx
-从库2 DB：pangu-examples-1
-
-CREATE TABLE...（建表脚本同主库）
-
-INSERT INTO `user` (`id`, `name`, `birthday`, `age`, `user_type`) VALUES (1, 'XC（slave-1）', NULL, 18, '1');
-```
-</TabItem>
-</Tabs>
 
 ### 安装相关盘古模块
 
