增加数据分片（只分库）范例程序

--- a/pangu-website/docs/advanced-guide/数据治理之数据分片.md
+++ b/pangu-website/docs/advanced-guide/数据治理之数据分片.md
@@ -86,28 +86,7 @@ import TabItem from '@theme/TabItem';
 盘古开发框架使用 ShardingSphere-JDBC 组件，通过数据源代理的方式实现数据分片功能。
 :::
 
-## 编程实战一：只分表
-
-### 初始化数据库环境
-
-数据库表结构如下图所示。
-<img width="200"
-  src={require('/resources/doc/31-pangu-framework-sharding.png').default}
-  alt="数据分片实现-只分表" />
-
-请根据如下逻辑表结构创建真实表 t_order0 和 t_order1。
-```jsx
-create table t_order
-(
-    order_id bigint      not null
-        primary key,
-    user_id  int         not null,
-    status   varchar(50) null
-)
-comment '逻辑表:订单表';
-```
-
-### 安装相关盘古模块
+## 安装相关盘古模块
 
 <Tabs defaultValue="dependency3">
 <TabItem value="parent" label="盘古 Parent">
@@ -151,167 +130,191 @@ comment '逻辑表:订单表';
 </TabItem>
 </Tabs>
 
+## 编程实战一：只分表
+
+### 初始化数据库环境
+
+数据库表结构如下图所示。
+<img width="200"
+  src={require('/resources/doc/31-pangu-framework-sharding.png').default}
+  alt="数据分片实现-只分表" />
+
+请根据如下逻辑表结构创建真实表 t_order0 和 t_order1。
+```jsx
+create table t_order
+(
+    order_id bigint      not null
+        primary key,
+    user_id  int         not null,
+    status   varchar(50) null
+)
+comment '逻辑表:订单表';
+```
+
 ### 本地配置
 
 > 为便于理解，本文基于本地配置的方式编写。若改为标准的 Nacos 配置中心模式，请参阅：[配置中心](/docs/advanced-guide/nacos-config-center)章节。
 
-<Tabs>
-<TabItem value="application" label="application.properties">
-
 ```jsx
-spring.profiles.active=${spring.profiles.active:dev}
-```
-</TabItem>
-<TabItem value="application-dev" label="application-dev.properties">
-
-```jsx
-spring.application.name=pangu-examples-shardingsphere-readwrite-splitting
-
+spring.application.name=pangu-examples-shardingsphere-sharding
 mybatis-plus.mapperLocations=classpath*:/mapper/**/*.xml
 mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 
-spring.shardingsphere.datasource.names=ds-master,ds-slave-0,ds-slave-1
+spring.shardingsphere.mode.type=Memory
+spring.shardingsphere.datasource.names=ds
+spring.shardingsphere.datasource.ds.type=com.zaxxer.hikari.HikariDataSource
+spring.shardingsphere.datasource.ds.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.shardingsphere.datasource.ds.jdbc-url=jdbc:mysql://localhost:3306/pangu-examples
+spring.shardingsphere.datasource.ds.username=root
+spring.shardingsphere.datasource.ds.password=123456
 
-# 主库数据源配置
-spring.shardingsphere.datasource.ds-master.type=com.zaxxer.hikari.HikariDataSource
-spring.shardingsphere.datasource.ds-master.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.shardingsphere.datasource.ds-master.jdbc-url=jdbc:mysql://localhost:3306/pangu-examples
-spring.shardingsphere.datasource.ds-master.username=root
-spring.shardingsphere.datasource.ds-master.password=root123456
+# print shardingsphere Actual SQL log
+spring.shardingsphere.props.sql-show=true
 
-# 从库1数据源配置
-spring.shardingsphere.datasource.ds-slave-0.type=com.zaxxer.hikari.HikariDataSource
-spring.shardingsphere.datasource.ds-slave-0.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.shardingsphere.datasource.ds-slave-0.jdbc-url=jdbc:mysql://localhost:3306/pangu-examples-0
-spring.shardingsphere.datasource.ds-slave-0.username=root
-spring.shardingsphere.datasource.ds-slave-0.password=root123456
+# sharding table `t_order` configuration
+spring.shardingsphere.rules.sharding.tables.t_order.actual-data-nodes=ds.t_order$->{0..1}
+spring.shardingsphere.rules.sharding.tables.t_order.table-strategy.standard.sharding-column=order_id
+spring.shardingsphere.rules.sharding.tables.t_order.table-strategy.standard.sharding-algorithm-name=sa1
+spring.shardingsphere.rules.sharding.tables.t_order.key-generate-strategy.column=order_id
 
-# 从库2数据源配置
-spring.shardingsphere.datasource.ds-slave-1.type=com.zaxxer.hikari.HikariDataSource
-spring.shardingsphere.datasource.ds-slave-1.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.shardingsphere.datasource.ds-slave-1.jdbc-url=jdbc:mysql://localhost:3306/pangu-examples-1
-spring.shardingsphere.datasource.ds-slave-1.username=root
-spring.shardingsphere.datasource.ds-slave-1.password=root123456
-
-# 读写分离策略配置
-spring.shardingsphere.rules.readwrite-splitting.data-sources.pangu-rws.type=Static
-# 写数据源配置
-spring.shardingsphere.rules.readwrite-splitting.data-sources.pangu-rws.props.write-data-source-name=ds-master
-# 读数据源配置
-spring.shardingsphere.rules.readwrite-splitting.data-sources.pangu-rws.props.read-data-source-names=ds-slave-0,ds-slave-1
-# 读负载均衡算法配置
-spring.shardingsphere.rules.readwrite-splitting.load-balancers.read-random.type=RANDOM
-
-
-logging.level.root=INFO
-logging.level.com.gitee.pulanos.pangu=INFO
-```
-</TabItem>
-</Tabs>
-
-### 主要逻辑代码
-
-#### 读操作自动走从库负载均衡
-```jsx
-public void readRoute() {
-	log.info("查询数据...");
-	UserEntity userEntity = userMapper.selectById(1L);
-	log.info("查询结果 {}", userEntity);
-}
-```
-
-#### 读操作强制走主库
-```jsx
-public void readByWriteRoute() {
-	HintManager hintManager = HintManager.getInstance();
-	hintManager.setWriteRouteOnly();
-	try {
-		log.info("查询数据（强制走主库）...");
-		UserEntity userEntity = userMapper.selectById(1L);
-		log.info("查询结果 {}", userEntity);
-	} finally {
-		hintManager.close();
-	}
-}
-```
-
-#### 写操作自动走主库
-```jsx
-public int writeRoute() {
-	log.info("插入数据...");
-	UserEntity userEntity = new UserEntity();
-	userEntity.setName("XC").setAge(18).setUserType("1");
-	int row = userMapper.insert(userEntity);
-	log.info("成功插入{}条数据。{}", row, userEntity);
-	return row;
-}
-```
-
-#### 事务方法里的所有读写操作都自动走主库
-```jsx
-@Transactional(rollbackFor = RuntimeException.class)
-public void doWithTransaction() {
-	log.info("插入数据...");
-	UserEntity userEntity = new UserEntity();
-	userEntity.setName("XC").setAge(18).setUserType("1");
-	int row = userMapper.insert(userEntity);
-	log.info("成功插入{}条数据。{}", row, userEntity);
-	log.info("查询数据（强制走主库）...");
-	UserEntity userEntityRead = userMapper.selectById(1L);
-	log.info("查询结果 {}", userEntityRead);
-}
-```
-
-## 测试
-
-### 启动类
-```jsx
-@EnableTransactionManagement
-@SpringBootApplication
-public class ReadWriteSplittingApplication {
-	public static void main(String[] args) {
-		PanGuApplicationBuilder.init(ReadWriteSplittingApplication.class).run(args);
-	}
-}
+# sharding-algorithms configuration
+spring.shardingsphere.rules.sharding.sharding-algorithms.sa1.type=INLINE
+spring.shardingsphere.rules.sharding.sharding-algorithms.sa1.props.algorithm-expression=t_order$->{order_id % 2}
 ```
 
 ### 测试用例
 
-#### 测试读操作自动走从库负载均衡
+#### 启动类
 ```jsx
-@Test
-public void readRoute() {
-	readWriteSplittingService.readRoute();
-	readWriteSplittingService.readRoute();
+@EnableTransactionManagement
+@SpringBootApplication
+public class ShardingApplication {
+	public static void main(String[] args) {
+		PanGuApplicationBuilder.init(ShardingApplication.class).run(args);
+	}
 }
 ```
 
-#### 测试读操作强制走主库
+#### 测试写入数据分片
+如下代码将根据配置好的分片算法将数据分别写入对应的真实分片表中。
 ```jsx
 @Test
-public void readByWriteRoute() {
-	readWriteSplittingService.readByWriteRoute();
+public void createOrder() {
+	TOrderEntity entity1 = new TOrderEntity().setUserId(1).setStatus("0");
+	tOrderMapper.insert(entity1);
+	TOrderEntity entity2 = new TOrderEntity().setUserId(1).setStatus("0");
+	tOrderMapper.insert(entity2);
+}
+```
+`TOrderEntity` 的 orderId 主键请通过如下注解生成。当然也可以自定义 ID 算法赋值。
+```jsx
+@TableId(value = "order_id", type = IdType.ASSIGN_ID)
+private Long orderId;
+```
+
+#### 测试查询结果聚合
+ID 150681599250 和 150683023105 分别为真实表 t_order0 和 t_order1 的主键 ID。
+```jsx
+@Test
+public void mergeQueryWithShardingColumn() {
+	LambdaQueryWrapper<TOrderEntity> lambdaQueryWrapper = Wrappers.lambdaQuery();
+	lambdaQueryWrapper.in(TOrderEntity::getOrderId, 150681599250L,150683023105L);
+	List<TOrderEntity> tOrderEntities = tOrderMapper.selectList(lambdaQueryWrapper);
+	log.info("结果集：{}", tOrderEntities);
 }
 ```
 
-#### 测试写操作自动走主库
+## 编程实战二：只分库
+### 初始化数据库环境
+
+数据库表结构如下图所示。
+<img width="200"
+  src={require('/resources/doc/32-pangu-framework-sharding.png').default}
+  alt="数据分片实现-只分库" />
+
+数据库逻辑表结构 [同上](#初始化数据库环境)，请自行创建相关真实库表结构。
+
+### 本地配置
+
+> 为便于理解，本文基于本地配置的方式编写。若改为标准的 Nacos 配置中心模式，请参阅：[配置中心](/docs/advanced-guide/nacos-config-center)章节。
+
 ```jsx
-@Test
-public void writeRoute() {
-	readWriteSplittingService.writeRoute();
-}
+spring.application.name=pangu-examples-shardingsphere-sharding
+mybatis-plus.mapperLocations=classpath*:/mapper/**/*.xml
+mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+
+spring.shardingsphere.mode.type=Memory
+spring.shardingsphere.datasource.names=ds
+spring.shardingsphere.datasource.ds.type=com.zaxxer.hikari.HikariDataSource
+spring.shardingsphere.datasource.ds.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.shardingsphere.datasource.ds.jdbc-url=jdbc:mysql://localhost:3306/pangu-examples
+spring.shardingsphere.datasource.ds.username=root
+spring.shardingsphere.datasource.ds.password=123456
+
+# print shardingsphere Actual SQL log
+spring.shardingsphere.props.sql-show=true
+
+# sharding table `t_order` configuration
+spring.shardingsphere.rules.sharding.tables.t_order.actual-data-nodes=ds.t_order$->{0..1}
+spring.shardingsphere.rules.sharding.tables.t_order.table-strategy.standard.sharding-column=order_id
+spring.shardingsphere.rules.sharding.tables.t_order.table-strategy.standard.sharding-algorithm-name=sa1
+spring.shardingsphere.rules.sharding.tables.t_order.key-generate-strategy.column=order_id
+
+# sharding-algorithms configuration
+spring.shardingsphere.rules.sharding.sharding-algorithms.sa1.type=INLINE
+spring.shardingsphere.rules.sharding.sharding-algorithms.sa1.props.algorithm-expression=t_order$->{order_id % 2}
 ```
 
-#### 测试事务方法里的所有读写操作都自动走主库
+### 测试用例
+
+
+## 编程实战三：分库分表
+### 初始化数据库环境
+
+数据库表结构如下图所示。
+<img width="200"
+  src={require('/resources/doc/33-pangu-framework-sharding.png').default}
+  alt="数据分片实现-只分库" />
+
+数据库逻辑表结构 [同上](#初始化数据库环境)，请自行创建相关真实库表结构。
+
+### 本地配置
+
+> 为便于理解，本文基于本地配置的方式编写。若改为标准的 Nacos 配置中心模式，请参阅：[配置中心](/docs/advanced-guide/nacos-config-center)章节。
+
 ```jsx
-@Test
-public void doWithTransaction() {
-	readWriteSplittingService.doWithTransaction();
-}
+spring.application.name=pangu-examples-shardingsphere-sharding
+mybatis-plus.mapperLocations=classpath*:/mapper/**/*.xml
+mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+
+spring.shardingsphere.mode.type=Memory
+spring.shardingsphere.datasource.names=ds
+spring.shardingsphere.datasource.ds.type=com.zaxxer.hikari.HikariDataSource
+spring.shardingsphere.datasource.ds.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.shardingsphere.datasource.ds.jdbc-url=jdbc:mysql://localhost:3306/pangu-examples
+spring.shardingsphere.datasource.ds.username=root
+spring.shardingsphere.datasource.ds.password=123456
+
+# print shardingsphere Actual SQL log
+spring.shardingsphere.props.sql-show=true
+
+# sharding table `t_order` configuration
+spring.shardingsphere.rules.sharding.tables.t_order.actual-data-nodes=ds.t_order$->{0..1}
+spring.shardingsphere.rules.sharding.tables.t_order.table-strategy.standard.sharding-column=order_id
+spring.shardingsphere.rules.sharding.tables.t_order.table-strategy.standard.sharding-algorithm-name=sa1
+spring.shardingsphere.rules.sharding.tables.t_order.key-generate-strategy.column=order_id
+
+# sharding-algorithms configuration
+spring.shardingsphere.rules.sharding.sharding-algorithms.sa1.type=INLINE
+spring.shardingsphere.rules.sharding.sharding-algorithms.sa1.props.algorithm-expression=t_order$->{order_id % 2}
 ```
+
+### 测试用例
+
+
 
 ## 本文相关范例源码
-- [pangu-examples-shardingsphere-readwrite-splitting](https://gitee.com/pulanos/pangu-framework/tree/master/pangu-examples/pangu-examples-shardingsphere-readwrite-splitting)：数据治理之读写分离范例
+- [pangu-examples-shardingsphere-sharding](https://gitee.com/pulanos/pangu-framework/tree/master/pangu-examples/pangu-examples-shardingsphere-sharding)：数据治理之数据分片范例
 
 ## 下一步
 继续阅读其它章节获取你想要的答案或通过我们的 [开发者社区](/docs/community) 寻求更多帮助。
