--- a/pangu-website/docs/范例模版工程.md
+++ b/pangu-website/docs/范例模版工程.md
@@ -77,7 +77,10 @@ slug: /examples-list
   1. 基于 Seata AT 模式的分布式事务范例。
 
 #### pangu-examples-shardingsphere-readwrite-splitting
-  1. 如何基于 ShardingSphere-JDBC	 开发一个读写分离且支持读负载均衡的范例程序。
+  1. 如何开发一个读写分离且支持读负载均衡的范例程序。
+
+#### pangu-examples-shardingsphere-sharding
+  1. 如何开发一个数据分片的范例程序。
 
 ## 获取范例代码
 
